--- a/css-sass/view/_navigation.scss
+++ b/css-sass/view/_navigation.scss
@@ -1,4 +1,6 @@
 .view-navigation {
+    $iconWidth: image-width("../images/navigation/icons/menu.png");
+    $iconHeight: image-height("../images/navigation/icons/menu.png");
     $navigation-sprite: sprite-map("navigation/icons/*.png");
     $navigation-2x-sprite: sprite-map("navigation/icons-2x/*.png");
 
@@ -7,36 +9,51 @@
     right: 0;
     z-index: 2;
 
-    -webkit-transition: all .1s ease-in-out;
-    -moz-transition: all .1s ease-in-out;
-    -o-transition: all .1s ease-in-out;
-    transition: all .1s ease-in-out;
+    @include transition(all .1s ease-in-out);
 
     &.active {
-        top:0;
+        top: 0;
     }
 
     .nav-items {
-        margin: 10px 10px 0 0;
+        margin: 5px 5px 0 0;
         padding: 0;
         list-style-type: none;
+        
+        position: relative;
+        width: $iconWidth;
+    }
+
+    .nav-options {
+        .nav-item {
+            @include opacity(0);
+            margin-bottom: 10px;
+        }
     }
 
     .nav-item {
-        width: image-width("../images/navigation/icons/menu.png");
-        height: image-height("../images/navigation/icons/menu.png");
+        width: $iconWidth;
+        height: $iconHeight;
         cursor: pointer;
-        background-repeat: no-repeat;
-        background-image: sprite-url($navigation-sprite);
 
-        position: relative;
+        .icon {
+            width: 100%;
+            height: 100%;
 
-        @media 
-        only screen and (-webkit-min-device-pixel-ratio: 2), 
-        only screen and (min-resolution: 192dpi) {
-            background-image: sprite-url($navigation-2x-sprite);
-            background-size: 100%;
+            background-repeat: no-repeat;
+            background-image: sprite-url($navigation-sprite);
+
+            @media 
+            only screen and (-webkit-min-device-pixel-ratio: 2), 
+            only screen and (min-resolution: 192dpi) {
+                background-image: sprite-url($navigation-2x-sprite);
+                background-size: 100%;
+            }
         }
+
+        position: absolute;
+        top: 0;
+        left: 0;
 
         .title {
             display: none;
@@ -65,7 +82,7 @@
         }
 
         @mixin nav-item ($type, $icon) {
-            &.#{$type} {
+            &.#{$type} .icon {
                 background-position: sprite-position($navigation-sprite, #{$icon});
 
                 // @see http://www.brettjankord.com/2012/11/28/cross-browser-retinahigh-resolution-media-queries/
@@ -87,30 +104,7 @@
         @include nav-item(test-ova, ova);
         @include nav-item(test-accuplex, accuplex);
 
-        // hide overview icon for now, since we don't have one
+        // TODO: we don't have an icon for overview
         //@include nav-item(overview, top);
-        &.overview {
-            display: none;
-        }
-    }
-
-    /* desktop */
-    @media (min-width:($mq-tablet)) {
-        /* disable menu toggle */
-        .nav-toggle {
-            display: none;
-        }
-
-        /* always show nav options */
-        .nav-options {
-            display: block !important;
-        }
-    }
-
-    /* phone & tablet */
-    @media (max-width:($mq-tablet - 1px)) {
-        .nav-options {
-            display: none;
-        }
     }
 }
