common/circle-arrow: added arrow scroll effect on hover https://app.asana.com/0/7908989541876/8021972699648

--- a/css-sass/view/_overview.scss
+++ b/css-sass/view/_overview.scss
@@ -267,9 +267,10 @@
 		position: absolute;
 		left: 50%;
 		bottom: -44px;
+		margin-left: -1 * $widgetCircleArrowWidth / 2;
 
-		img {
-			margin-left: -1 * $widgetCircleArrowWidth / 2;
+		@media (max-width:($mq-phone)) {
+			margin-left: -1 * $widgetCircleArrowWidthPhone / 2;
 		}
 	}
 
