--- a/js/template/Overview.html
+++ b/js/template/Overview.html
@@ -121,9 +121,8 @@
 			</div>
 		</div>
 
-		<div class="widget-circle-arrow">
-			<img src="images/overview/recap/circle.png" alt="" />
-			<img src="images/overview/recap/arrow-down.png" alt="get started" />
+		<div class="widget-circle-arrow down">
+			<div class="inner"></div>
 		</div>
 	</div>
 
