--- a/js/template/Page.html
+++ b/js/template/Page.html
@@ -29,9 +29,8 @@
         <div class="yui3-g-r">
             <div class="yui3-u-1">
                 <div class="yui3-u-c">
-                    <div class="widget-circle-arrow">
-                        <img src="images/overview/recap/circle.png" alt="" />
-                        <img src="images/overview/recap/arrow-up.png" alt="" />
+                    <div class="widget-circle-arrow up">
+                        <div class="inner"></div>
                     </div>
 
                     <h1>
