--- a/js/template/subtest/RangeGroup.html
+++ b/js/template/subtest/RangeGroup.html
@@ -13,7 +13,7 @@
         <div class="yui3-u-1">
             <div class="yui3-u-c scroller-container">
                 <div class="scroller">
-                    <div class="pager previous"><div class="button"></div></div>
+                    <div class="pager previous"><div class="button left"><div class="inner"></div></div></div>
 
                     <div class="content">
                         <div class="content-inner">
@@ -25,7 +25,7 @@
                         </div>
                     </div>
 
-                    <div class="pager next"><div class="button"></div></div>
+                    <div class="pager next"><div class="button right"><div class="inner"></div></div></div>
                 </div>
 
                 <div class="swipe"></div>
