--- a/js/template/widget/TestSubsection.html
+++ b/js/template/widget/TestSubsection.html
@@ -2,7 +2,7 @@
 
     <div class="header">
         <span class="title yui3-u-c">
-            <span class="widget-arrow shrink"></span>
+            <span class="widget-arrow shrink"><span class="inner"></span></span>
             {{title}}
         </span>
     </div>
