--- a/js/template/widget/TestOverview.html
+++ b/js/template/widget/TestOverview.html
@@ -4,7 +4,7 @@
             <!-- description -->
             <div class="yui3-u-1-2 section">
                 <div class="yui3-u-c">
-                    <div class="description">{{description}}&nbsp;<span class="widget-arrow"></span></div>
+                    <div class="description">{{description}}&nbsp;<span class="widget-arrow"><span class="inner"></span></span></div>
 
                     <p class="more">{{more}}</p>
                 </div>
